Bug Fix: Overlap

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -357,7 +357,7 @@
 
 /* Me */
 
-	#me {
+	#us {
 		.pic {
 			position: relative;
 			display: block;
@@ -592,7 +592,7 @@
 
 		/* Me */
 
-			#me {
+			#us {
 				padding: 0;
 				height: 20em;
 
@@ -669,6 +669,7 @@
 						font-size: 1.5em;
 						letter-spacing: -0.015em;
 						margin-top: 0;
+						width: 50%;
 					}
 				}
 			}
@@ -799,7 +800,7 @@
 			}
 
 		/* Me */
-			#me {
+			#us {
 				.pic {
 					width: 100%;
 
